--- a/src/views/index.html
+++ b/src/views/index.html
@@ -23,6 +23,7 @@
         <link rel="apple-touch-icon" sizes="167x167" href="../img/favicons/apple-touch-icon-167x167.png">
         <link rel="apple-touch-icon" sizes="180x180" href="../img/favicons/apple-touch-icon-180x180.png">
         <link rel="apple-touch-icon" sizes="1024x1024" href="../img/favicons/apple-touch-icon-1024x1024.png">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab:400,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../styles/main.css">
     </head>
     <body>
@@ -56,6 +57,7 @@
                         </div>
                     </div>
                  </div>
+            </div>
      <div class="page page_grey">
          <div class="wrap">
             <div class="block-author">
