--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,8 @@
 @import "base/general";
 @import "../blocks/modules";
 
+$light-color: white;
+$accent-color: #65e496;
 h1, h2, h3, h4, p {
     margin: 0;
     padding: 0;
@@ -16,17 +18,116 @@ body {
 
 }
 
+.wrap {
+    max-width: 1170px;
+    margin: 0 auto;
+}
+
 .page-main {
     background-image: url(../img/bg-main.png);
     background-repeat: no-repeat;  
     background-size: cover;
+    color: $light-color;
+    padding-bottom: 50px;
 }
 
-header {
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1170px;
+    margin: 0 auto;
+    padding-top: 38px;
+    padding-bottom: 166px;
+    font-family: 'Open Sans', serif;
     &__logo {
         display: block;
         width: 137px;
         height: 28px;
         background-image: url(../img/logo.svg);
+        background-repeat: no-repeat;
+    }
+    &-list {
+        list-style-type: none;
+        display: flex;
+        justify-content: flex-end;
+        &__item {
+            margin-left: 22px;
+            padding-bottom: 5px;
+            border-bottom: 3px solid transparent;
+            transition: 0.3s;
+            &:hover {
+                border-bottom: 3px solid $accent-color;
+            }
+        }
+        &__item.active {
+            border-bottom: 3px solid $accent-color;
+        }
+        &__link {
+            color: $light-color;
+            text-decoration: none;
+            letter-spacing: 0.5px;
+        }
     }
 }
+
+.block-text {
+    flex-basis: calc(100% - 500px);
+    &__name{
+        font-family: 'Open Sans', serif;  
+        font-size: 18px;
+        letter-spacing: 0.7px;
+        margin-bottom: 30px;
+    }
+    &__title {
+        font-size: 48px;
+        font-weight: 700;
+        letter-spacing: 1.8px;
+        margin-bottom: 40px;
+        span {
+            display: block;
+            color: $accent-color;
+            font-size: 18px;
+            margin-top: 9px;
+            letter-spacing: 1px;
+        }
+    }
+    &__description {
+        font-family: 'Open Sans', serif;
+        font-size: 15px;
+        line-height: 24px;
+        margin-bottom: 24px;
+        letter-spacing: 0.75px;
+    }
+    &__btn {
+        display: block;
+        background-color: $accent-color;
+        color: white;
+        text-decoration: none;
+        max-width: 250px;
+        border-radius: 3px;
+        text-align: center;
+        font-size: 18px;
+        margin-top: 48px;
+        padding: 14px 0;
+        letter-spacing: 0.7px;
+        margin-bottom: 19px;
+    }
+    &__small {
+        font-style: italic;
+    }
+    
+}
+.block-book{
+    display: flex;
+    justify-content: space-between;
+        &-demo{
+            display: block;
+            width: 447px;
+            height: 643px;
+            background-image: url(../img/book.svg);
+            background-repeat: no-repeat;
+            flex-basis: 447px;
+            justify-content: flex-start;
+        }
+    }
