--- a/src/views/index.html
+++ b/src/views/index.html
@@ -23,7 +23,7 @@
         <link rel="apple-touch-icon" sizes="167x167" href="../img/favicons/apple-touch-icon-167x167.png">
         <link rel="apple-touch-icon" sizes="180x180" href="../img/favicons/apple-touch-icon-180x180.png">
         <link rel="apple-touch-icon" sizes="1024x1024" href="../img/favicons/apple-touch-icon-1024x1024.png">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab:400,700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i|Roboto+Slab:400,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../styles/main.css">
     </head>
     <body>
@@ -32,83 +32,87 @@
                 <div class="header">
                     <a href="" class="header__logo"></a>
                     <ul class="header-list">
-                        <li class="header-list__item">Home</li>
-                        <li class="header-list__item">About</li>
-                        <li class="header-list__item">Contents</li>
-                        <li class="header-list__item">Books</li>
-                        <li class="header-list__item">Education</li>
-                        <li class="header-list__item">Skills</li>
-                        <li class="header-list__item">Portfolio</li>
-                        <li class="header-list__item">Clients</li>
-                        <li class="header-list__item">Contact</li>
+                        <li class="header-list__item active"><a href="" class="header-list__link">Home</a></li>
+                        <li class="header-list__item"><a href="" class="header-list__link">About</a></li>
+                        <li class="header-list__item"><a href="" class="header-list__link">Contents</a></li>
+                        <li class="header-list__item"><a href="" class="header-list__link">Books</a></li>
+                        <li class="header-list__item"><a href="" class="header-list__link">Education</a></li>
+                        <li class="header-list__item"><a href="" class="header-list__link">Skills</a></li>
+                        <li class="header-list__item"><a href="" class="header-list__link">Portfolio</a></li>
+                        <li class="header-list__item"><a href="" class="header-list__link">Clients</a></li>
+                        <li class="header-list__item"><a href="" class="header-list__link">Contact</a></li>
                     </ul>
                 </div>  
             </header>
-                <div class="wrap">
+
+            <div class="wrap">
                     <div class="block-book">
-                        <div></div>
+                        <div class="block-book-demo"></div>
                         <div class="block-text">
                             <p class="block-text__name">- By Emma Anderson</p>
                             <h1 class="block-text__title">BUKEE: THE BOOK <span>A room without books is like a body without a soul</span></h1>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p> 
-                            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.</p>
+                            <p class="block-text__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p> 
+                            <p class="block-text__description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.</p>
                             <a href="" class="block-text__btn">Buy this book - $15.00	</a>
-                            <small>* Some conditions may applicable</small>
+                            <small class="block-text__small">* Some conditions may applicable</small>
                         </div>
                     </div>
-                 </div>
             </div>
-     <div class="page page_grey">
-         <div class="wrap">
-            <div class="block-author">
-                <div class="block-text">
-                    <p class="block-text__name">- Book Author</p>   
-                    <h2 class="block-text__title">Emma Anderson <span>A room without books is like a body without a soul</span></h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-                    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.</p>
-                    <a href="" class="block-text__btn">Read full biography	</a> 
-                </div>  
-                <div></div>   
-                <div class="block-numbers">
-                    <p><span>12</span>Total published books</p>
-                    <p><span>5</span>Happy readers</p>
-                    <p><span>15,000</span>Happy readers</p>
+        </div>
+
+        <div class="page page_grey">
+            <div class="wrap">
+                <div class="block-author">
+                    <div class="block-text">
+                        <p class="block-text__name">- Book Author</p>   
+                        <h2 class="block-text__title">Emma Anderson <span>A room without books is like a body without a soul</span></h2>
+                        <p class="block-text__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                        <p class="block-text__description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.</p>
+                        <a href="" class="block-text__btn">Read full biography	</a> 
+                    </div>  
+                    <div></div>   
+                    <div class="block-numbers">
+                        <p><span>12</span>Total published books</p>
+                        <p><span>5</span>Happy readers</p>
+                        <p><span>15,000</span>Happy readers</p>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div> 
-    <div class="page">
-        <div class="wrap">
-            <h2 class="page__title">Book Contents </h2> 
-            <p class="page__subtitle">Let’s see what we have covered in the book </p>
-            <div class="about">
-                <h3>About the book</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna ali qua. Ut enim ad minim veniam, quis nostrud exercitation ull amco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillu m dolore eu fugiat nulla pariatur. </p>
-                <p>Featured in:</p>
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ul>
-            </div>    
-           <div>
-               <h3>Table of contents</h3>
-               <ol>
-                   <li>1. Lorem ipsum dolor sit amet</li>
-                   <li>2. Consectetur adipisicing elit</li>
-                   <li>3. Labore et dolore magna</li>
-                   <li>4. Consectetur adipisicing elit</li>
-                   <li>5. Labore et dolore magna</li>
-                   <li>6.  Lorem ipsum dolor sit amet</li>
-                   <li>7. Consectetur adipisicing elit</li>
-                   <li>8. Labore et dolore magna</li>
-                   <li>9. Consectetur adipisicing elit</li>
-                   <li>10. Labore et dolore magna</li>
-               </ol>
-               <button>More</button>
-           </div>
-        </div>
-    </div> 
+        </div> 
+
+        <div class="page">
+            <div class="wrap">
+                <h2 class="page__title">Book Contents </h2> 
+                <p class="page__subtitle">Let’s see what we have covered in the book </p>
+                <div class="about">
+                    <h3>About the book</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna ali qua. Ut enim ad minim veniam, quis nostrud exercitation ull amco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillu m dolore eu fugiat nulla pariatur. </p>
+                    <p>Featured in:</p>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>    
+                <div>
+                    <h3>Table of contents</h3>
+                    <ol>
+                        <li>1. Lorem ipsum dolor sit amet</li>
+                        <li>2. Consectetur adipisicing elit</li>
+                        <li>3. Labore et dolore magna</li>
+                        <li>4. Consectetur adipisicing elit</li>
+                        <li>5. Labore et dolore magna</li>
+                        <li>6.  Lorem ipsum dolor sit amet</li>
+                        <li>7. Consectetur adipisicing elit</li>
+                        <li>8. Labore et dolore magna</li>
+                        <li>9. Consectetur adipisicing elit</li>
+                        <li>10. Labore et dolore magna</li>
+                    </ol>
+                    <button>More</button>
+                </div>
+            </div>
+        </div> 
+        
     <script src="../js/main.js"></script>
     </body>
 </html>
