--- a/src/views/index.html
+++ b/src/views/index.html
@@ -23,7 +23,7 @@
         <link rel="apple-touch-icon" sizes="167x167" href="../img/favicons/apple-touch-icon-167x167.png">
         <link rel="apple-touch-icon" sizes="180x180" href="../img/favicons/apple-touch-icon-180x180.png">
         <link rel="apple-touch-icon" sizes="1024x1024" href="../img/favicons/apple-touch-icon-1024x1024.png">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i|Roboto+Slab:100,400,700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i|Roboto+Slab:100,400,700&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/8af036d04a.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="../styles/main.css">
     </head>
@@ -48,12 +48,19 @@
 
             <div class="wrap">
                     <div class="block-book">
-                        <div class="block-book-demo"></div>
+                        <div class="block-book-demo">
+                            <h2 class="block-book-demo__title">
+                                Good book
+                                <span>Don't judge a book by its cover</span>
+                            </h2>
+                            <p class="block-book-demo__author">- By Emma Anderson</p>
+
+                        </div>
                         <div class="block-text">
                             <p class="block-text__name">- By Emma Anderson</p>
                             <h1 class="block-text__title">BUKEE: THE BOOK <span>A room without books is like a body without a soul</span></h1>
                             <p class="block-text__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p> 
-                            <p class="block-text__description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.</p>
+                            <p class="block-text__description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut</p>
                             <a href="" class="block-text__btn">Buy this book - $15.00	</a>
                             <small class="block-text__small">* Some conditions may applicable</small>
                         </div>
@@ -68,7 +75,7 @@
                         <p class="block-text__name block-text__name_top">- Book Author</p>   
                         <h2 class="block-text__title">Emma Anderson <span>A room without books is like a body without a soul</span></h2>
                         <p class="block-text__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-                        <p class="block-text__description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque.</p>
+                        <p class="block-text__description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut</p>
                         <a href="" class="block-text__btn">Read full biography	</a> 
                     </div>  
                     <div class="block-ava">
@@ -85,7 +92,7 @@
 
                 <div class="block-counter">
                         <p><span>12</span>Total published books</p>
-                        <p><span>5</span>Happy readers</p>
+                        <p><span>5</span>Sest selling book</p>
                         <p><span>15,000</span>Happy readers</p>
                 </div>
             </div>
